--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
                     <a class="nav-link active" aria-current="page" href="#">Inicio</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="about">Acerca de Mi</a>
+                    <a class="nav-link" href="#about">Acerca de Mi</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Portafolio</a>
+                    <a class="nav-link" href="#portafolio">Portafolio</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Contacto</a>
+                    <a class="nav-link" href="#contacto">Contacto</a>
                   </li>
                 </ul>
                 
@@ -92,7 +92,7 @@
             </div>
         </div>
     </section>
-    <section class="container">
+    <section class="container" id="portafolio">
         <div class="row">
             <div class="col"><div class="card" style="width: 18rem;">
                 <img src="./img/Img2.jpg" class="card-img-top" alt="..." height="200px">
